--- a/includes/search.html
+++ b/includes/search.html
@@ -1,6 +1,6 @@
 <div id="loader" class="loader"></div>
 <div
-  class="box cards shade1 list br0- bcwhite-"
+  class="box cards shade1 br0- bcwhite-"
   bindvar=":"
   bindasset="apikey:api.api_key"
   bindquery="q:q;c:category"
