--- a/templates/map.html
+++ b/templates/map.html
@@ -1,38 +1,11 @@
 <template>
   <header class="topbar h4_5 pr1 shade1">
     <figure class="sel p075">
-      <a href="./"><img class="br50 bos2 red bw3 shade1" src="https://www.aramean.institute/favicon.ico"></a>
+      <a href="./"><img class="br50 bos2 red bw3 shade1 hue-rotate" src="https://www.aramean.institute/favicon.ico"></a>
     </figure>
     <div class="ml0 pr f1">
-      <form class="zi3" id="form" method="get" action="search.html" target="_top">
-        <input
-          id="query2"
-          name="q"
-          type="text"
-          class="bs1 p1 h3 br05 dark white w100 zi3"
-          globalize-get="input_search"
-          globalize-target="placeholder"
-          autocomplete="off">
-          <input
-          type="submit"
-          class="bos0 bc0 white p1 h5 w4 icon icon16 pa r0"
-          value="&#128269;">
-      </form>
-      <div
-        stop="data-src"
-        bindglobal="l:globalize.code"
-        bindfield="q:#query2"
-        bindasset="apikey:api.api_key;endpoint:api.words.endpoint"
-        data-src="{endpoint}?select=*&word->>{l}=ilike.{q}*&limit=30"
-        data-header="apikey:{apikey};Prefer:count=exact"
-        data-iterate="true"
-        data-loader="false"
-        class="box br05 bcwhite- black- pa w100 ail- zi2 autocomplete"
-        data-onempty="#empty2"
-        hide>
-        <figure>
-          <a bindglobal="l:globalize.code" data-set="id:id" data-get="word.{l}" href="word.html?i={id}" class="p1"></a>
-        </figure>
+      <div class="bcsnow zi3" id="form" method="get" action="search.html" target="_top">
+        
       </div>
       <div id="empty2" class="pa w100 bcwhite zi2" hide>
         <p class="m1" bindfield="q:#query2">No results found for <b>{q}</b></p>
@@ -62,7 +35,7 @@
           <a click="toggle" marginbottom="0.5rem" clicktargetfield="aside[1]" keyboard-key="m" keyboard-action="click" keyboard-scope="body" class="button pl1"><i class="icon32">«</i></a>
           <hr class="bcblack">
           <div class="tac w100" margintop="0.5rem">
-            <img class="br50 w3r mb05 bos8 red bw3 shade2 m0a" src="https://www.aramean.institute/favicon.ico">
+            <img class="br50 w3r mb05 bos8 red bw3 shade2 hue-rotate m0a" src="https://www.aramean.institute/favicon.ico">
             <h6 class="bold" globalize-get="title" marginbottom="1rem"></h6>
             <select name="language" class="p1 m0a fs08 tac shade2 light" onvaluechange="globalize-set">
               <option selected disabled globalize-get>Change language</option>
@@ -82,8 +55,5 @@
       </form>
     </nav>
   </aside>
-  <footer class="flc">
-    <button class="button" paddingright="1rem" paddingleft="1rem">Skip</button>
-    <button class="button" paddingright="1rem" paddingleft="1rem">Check</button>
-  </footer>
+  <footer></footer>
 </template>
