--- a/templates/search.html
+++ b/templates/search.html
@@ -5,18 +5,7 @@
     </figure>
     <div class="ml0 pr f1">
       <form class="zi3" id="form" method="get" action="search.html" target="_top">
-        <input
-          id="query2"
-          name="q"
-          type="text"
-          class="bs1 p1 h3 br05 dark white w100 zi3"
-          globalize-get="input_search"
-          globalize-target="placeholder"
-          autocomplete="off">
-          <input
-          type="submit"
-          class="bos0 bc0 white p1 h5 w4 icon icon16 pa r0"
-          value="&#128269;">
+        <progress class="shade1 green bcgray br1" value="1" max="100"></progress>
       </form>
       <div
         stop="data-src"
