--- a/templates/map.html
+++ b/templates/map.html
@@ -1,7 +1,7 @@
 <template>
   <header class="topbar h4_5 pr1 shade1">
     <figure class="sel p075">
-      <a href="./"><img class="br50 bos2 red bw3 shade1 hue-rotate" src="https://www.aramean.institute/favicon.ico"></a>
+      <a href="./"><img class="br50 bos2 red bw3 shade1" src="https://www.aramean.institute/favicon.ico"></a>
     </figure>
     <div class="ml0 pr f1">
       <div class="bcsnow zi3" id="form" method="get" action="search.html" target="_top">
@@ -27,7 +27,7 @@
     </div>
   </header>
   <aside></aside>
-  <main class="pauto"></main>
+  <main class=""></main>
   <aside>
     <nav class="sidebar pt05 white- shade2" width="70vw">
       <form>
