--- a/includes/search.html
+++ b/includes/search.html
@@ -13,8 +13,10 @@
   globalize-onsetload="rerun"
   data-iterate="true">
   <a data-set="i:id" href="word.html?i={i}" class="p1">
-    <figure class="pr">
-      <p bindglobal="l:globalize.code" data-get="word.{l}"></p>
+    <figure class="pr tac">
+      <img style="margin: 0 auto" padding="1rem" data-set="icon:icon.svgrepo" setsrc="https://www.svgrepo.com/show/{icon}.svg" width="70%">
+      <h3 data-get="word.syr_lat">?</h3>
+      <h5 bindglobal="l:globalize.code" data-get="word.syr"></h5>
     </figure>
   </a>
 </div>
