--- a/templates/search.html
+++ b/templates/search.html
@@ -71,8 +71,8 @@
       </form>
     </nav>
   </aside>
-  <footer class="flc">
-    <button class="button" paddingright="1rem" paddingleft="1rem">Skip</button>
-    <button class="button" paddingright="1rem" paddingleft="1rem">Check</button>
+  <footer class="flc gut2- h5" height="5rem">
+    <button class="button" radius="1rem" bold paddingright="2rem" paddingleft="2rem" lineheight="2.5rem">Skip</button>
+    <button class="button bcgreen white" bold radius="1rem" paddingright="2rem" paddingleft="2rem" lineheight="2.5rem">Check</button>
   </footer>
 </template>
