--- a/includes/search.html
+++ b/includes/search.html
@@ -12,7 +12,10 @@
   data-onempty="#empty"
   globalize-onsetload="rerun"
   data-iterate="true">
-  <a data-set="i:id" href="word.html?i={i}" class="p1">
+  <a
+    data-set="i:id"
+    click="responsivevoice--speak:[hello]"
+    class="p1">
     <figure class="pr tac">
       <img style="margin: 0 auto" padding="1rem" data-set="icon:icon.svgrepo" setsrc="https://www.svgrepo.com/show/{icon}.svg" width="70%">
       <h3 data-get="word.syr_lat">?</h3>
