--- a/includes/learn.html
+++ b/includes/learn.html
@@ -1,4 +1,3 @@
-<div id="loader" class="loader"></div>
 <div
   class="box cards shade1 br0- bcwhite-"
   bindvar=":"
@@ -13,8 +12,8 @@
   globalize-onsetload="rerun"
   data-iterate="true">
   <a
-    data-set="i:id"
-    click="responsivevoice--speak:[hello]"
+    data-set="i:id;word:speech_rv.syr"
+    click="responsivevoice--speak:[{word}]"
     class="p1">
     <figure class="pr tac">
       <img style="margin: 0 auto" padding="1rem" data-set="icon:icon.svgrepo" setsrc="https://www.svgrepo.com/show/{icon}.svg" width="70%">
