--- a/includes/learn.html
+++ b/includes/learn.html
@@ -1,5 +1,5 @@
 <div
-  class="box cards shade1 br0- bcwhite-"
+  class="box cards shade1 xs_gtc2 lg_gtc4 br0- bcwhite-"
   bindvar=":"
   bindasset="apikey:api.api_key"
   bindquery="q:q;c:category"
