--- a/includes/learn.html
+++ b/includes/learn.html
@@ -1,3 +1,4 @@
+<h1 marginbottom="2rem" class="tac">Which one of these is ""?</h1>
 <div
   class="box cards shade1 xs_gtc2 lg_gtc4 br0- bcwhite-"
   bindvar=":"
