--- a/includes/learn.html
+++ b/includes/learn.html
@@ -1,4 +1,4 @@
-<h1 marginbottom="2rem" class="tac">Which one of these is ""?</h1>
+<h1 marginbottom="2%" class="tac">Which one of these is ""?</h1>
 <div
   class="box cards xs_gtc2 lg_gtc3 br0- bcwhite-"
   bindvar=":"
