--- a/includes/learn.html
+++ b/includes/learn.html
@@ -15,7 +15,8 @@
   <a
     data-set="i:id;word:speech_rv.syr"
     click="responsivevoice--speak:[{word}]"
-    class="p05 m025 shade1">
+    padding="5%"
+    class="m025 shade1">
     <figure class="pr tac">
       <img style="margin: 0 auto" padding="1rem" data-set="icon:icon.svgrepo" setsrc="https://www.svgrepo.com/show/{icon}.svg" width="70%">
       <h3 data-get="word.syr_lat">?</h3>
