--- a/includes/learn.html
+++ b/includes/learn.html
@@ -10,7 +10,7 @@
   data-onempty="#empty"
   globalize-onsetload="rerun"
   data-iterate="words"
-  data-bind="eng:#word">
+  data-bind="word.eng:#word">
   <a
     data-set="i:id;word:speech_rv.syr"
     click="responsivevoice--speak:[{word}]"
