--- a/includes/learn.html
+++ b/includes/learn.html
@@ -9,7 +9,7 @@
   data-loader="#loader"
   data-onempty="#empty"
   globalize-onsetload="rerun"
-  data-iterate="words"
+  data-iterate="alternatives"
   data-bind="word.eng:#word">
   <a
     data-set="i:id;word:speech_rv.syr"
