--- a/includes/learn.html
+++ b/includes/learn.html
@@ -1,4 +1,4 @@
-<h1 marginbottom="2%" class="tac">Which one of these is "<span id="word"></span>"?</h1>
+<h1 marginbottom="2%" class="tac">Which one of these is "<span id="word" bold></span>"?</h1>
 <div
   class="box cards xs_gtc2 lg_gtc3 br0- bcwhite-"
   bindvar=":"
@@ -10,7 +10,7 @@
   data-onempty="#empty"
   globalize-onsetload="rerun"
   data-iterate="alternatives"
-  data-bind="word.eng:#word">
+  data-bind="main.word.eng:#word">
   <a
     data-set="i:id;word:speech_rv.syr"
     click="responsivevoice--speak:[{word}]"
