--- a/templates/learn.html
+++ b/templates/learn.html
@@ -56,7 +56,7 @@
     </nav>
   </aside>
   <footer class="flc gut2- h5" height="5rem">
-    <button class="button" radius="1rem" bold paddingright="2rem" paddingleft="2rem" lineheight="2.5rem">Skip</button>
+    <button bindquery="c:c;p:p" href="?c={c}&p={p:1}" class="button" radius="1rem" bold paddingright="2rem" paddingleft="2rem" lineheight="2.5rem">Skip</button>
     <button class="button bcgreen white" bold radius="1rem" paddingright="2rem" paddingleft="2rem" lineheight="2.5rem">Check</button>
   </footer>
 </template>
