--- a/includes/learn.html
+++ b/includes/learn.html
@@ -1,4 +1,8 @@
-<h1 marginbottom="2%" class="tac">Which one of these is "<span id="word" bold></span>"?</h1>
+<h1 marginbottom="2%" class="tac">Which one of these is <span
+  id="word"
+  class="di"
+  ondata-bindchange="insertafterbegin:[&quot;];insertbeforeend:[&quot;];insertafterend:[?]"
+  bold></span></h1>
 <div
   class="box cards xs_gtc2 lg_gtc3 br0- bcwhite-"
   bindvar=":"
