--- a/templates/learn.html
+++ b/templates/learn.html
@@ -13,7 +13,6 @@
     </div>
     <button click="toggle" clicktargetfield="aside[1]" class="md_du light pl1"><i class="icon32">≡</i></button>
     <div class="gap1- fs07 pl1 pr05 md_dn">
-      <a href="browse.html"><i class="icon pr025">≡</i><span globalize-get>Browse</span></a>
       <details class="md_dn">
         <summary globalize="it_products"><i class="icon pr025">🌐</i><span globalize-get>Language</span></summary>
         <ul class="pa r1 bcwhite p05 fdc bs5 p025- fdc" margintop="0.5rem" width="7rem">
@@ -56,7 +55,7 @@
     </nav>
   </aside>
   <footer class="flc gut2- h5" height="5rem">
-    <button bindquery="c:c;p:p" href="?c={c}&p={p:1}" class="button" radius="1rem" bold paddingright="2rem" paddingleft="2rem" lineheight="2.5rem">Skip</button>
+    <button bindquery="c:c;p:p" setqueryhref="p:++" href="?c={c}&p={p:1}" class="button" radius="1rem" bold paddingright="2rem" paddingleft="2rem" lineheight="2.5rem">Skip</button>
     <button class="button bcgreen white" bold radius="1rem" paddingright="2rem" paddingleft="2rem" lineheight="2.5rem">Check</button>
   </footer>
 </template>
