--- a/includes/learn.html
+++ b/includes/learn.html
@@ -21,7 +21,7 @@
   data-bind="main.word.eng:#word">
   <label
     data-set="i:id;word:speech_rv.syr"
-    click="responsivevoice--speak:[{word}]"
+    click="responsivevoice--speak:[{word}];enable:#check"
     for="a{i}"
     padding="5%"
     class="m025 shade1">
