--- a/templates/learn.html
+++ b/templates/learn.html
@@ -56,6 +56,6 @@
   </aside>
   <footer class="flc gut2- h5" height="5rem">
     <button bindquery="c:c;p:p" setqueryhref="p:++" href="?c={c}&p={p:1}" class="button" radius="1rem" bold paddingright="2rem" paddingleft="2rem" lineheight="2.5rem">Skip</button>
-    <button class="button bcgreen white" bold radius="1rem" paddingright="2rem" paddingleft="2rem" lineheight="2.5rem" click="submit:[#quiz]" onclicked="alert:[Demo]" id="check" disabled>Check</button>
+    <button id="check" class="gray" bold radius="1rem" paddingright="2rem" paddingleft="2rem" lineheight="2.5rem" click="submit:[#quiz]" onclicked="alert:[Demo]" onenabled="bgcolor:[green];color:[white]" disabled>Check</button>
   </footer>
 </template>
