--- a/includes/learn.html
+++ b/includes/learn.html
@@ -21,7 +21,8 @@
   data-bind="main.word.eng:#word">
   <label
     data-set="i:id;word:speech_rv.syr"
-    click="responsivevoice--speak:[{word}];enable:#check"
+    click="responsivevoice--speak:[{word}]"
+    id="l{i}"
     for="a{i}"
     padding="5%"
     class="m025 shade1">
@@ -31,5 +32,13 @@
         <h5 bindglobal="l:globalize.code" data-get="word.syr"></h5>
       </figure>
   </label>
-  <input type="radio" name="alternative" data-get="id" data-set="id:id" id="a{id}" hide>
+  <input
+    type="radio"
+    data-get="id"
+    data-set="id:id"
+    onselectchange="boxshadow:#l{id}:[gray 0 0 0 1px];enable:#check"
+    onunselected="boxshadow:#l{id}:[0 2px 4px rgba(0,0,0, .1)]"
+    name="alternative"
+    id="a{id}"
+    hide>
 </form>
