--- a/templates/learn.html
+++ b/templates/learn.html
@@ -58,7 +58,7 @@
     <button
       bindquery="c:c;p:p"
       setqueryhref="p:++"
-      hrefs="?c={c}&p={p:1}"
+      href="?c={c}&p={p:1}"
       class="button"
       radius="1rem"
       bold
