--- a/templates/learn.html
+++ b/templates/learn.html
@@ -3,8 +3,8 @@
     <figure class="sel p075">
       <a href="./"><img class="br50 bos2 red bw3 shade1" src="https://www.aramean.institute/favicon.ico"></a>
     </figure>
-    <div class="ml0 pr f1">
-      <progress id="progress" class="shade1 green bcgray br1" bindquery="p:p" value="{p}" max="9"></progress>
+    <div class="f1">
+      <progress id="progress" class="shade1 green bcgray br1" bindquery="p:p" value="{p:0}" max="100"></progress>
     </div>
     <button click="toggle" clicktargetfield="aside[1]" class="md_du light pl1"><i class="icon32">≡</i></button>
     <div class="gap1- fs07 pl1 pr05 md_dn">
