--- a/templates/learn.html
+++ b/templates/learn.html
@@ -49,7 +49,7 @@
       </form>
     </nav>
   </aside>
-  <footer class="flc gut2- h5" height="5rem">
+  <footer class="flc gut2- h5 pr" height="5rem">
     <button
       bindquery="c:c;p:p"
       setqueryhref="p:++"
@@ -69,9 +69,16 @@
       paddingright="2rem"
       paddingleft="2rem"
       lineheight="2.5rem"
-      click="submit:[#quiz]"
-      onclicked="alert:[Demo]"
+      click="submit:#quiz:[#quiz]"
       onenabled="bgcolor:[green];color:[white]"
-      disabled>Check</button>
+      d-disabled>Check</button>
+
+    <div id="footer_correct" bgcolor="limegreen" color="white" class="pa" width="100%" height="100%" hide>
+      <h3>CORRECT</h3>
+    </div>
+
+    <div id="footer_wrong" bgcolor="red" color="white" class="pa" width="100%" height="100%" hide>
+      <h3>WRONG</h3>
+    </div>
   </footer>
 </template>
