--- a/includes/learn.html
+++ b/includes/learn.html
@@ -6,8 +6,8 @@
 <form
   id="quiz"
   method="get"
-  onformsubmit="reset"
-  action=""
+  onsubmitted="data-bindpayload:[correct:alternative]"
+  ifdata-bindpayload="([{correct}]:[{main}]):show:#footer_correct?show:#footer_wrong"
   class="box cards xs_gtc2 lg_gtc4 br0- bcwhite-"
   bindvar=":"
   bindasset="apikey:api.api_key"
@@ -16,7 +16,7 @@
   data-header="apikey:{apikey};Prefer:count=exact"
   data-loader="#loader"
   data-onempty="#empty"
-  data-set="total:total"
+  data-set="total:total;main:main.id"
   data-onfinish="setmax:#progress:[{total}]"
   globalize-onsetload="rerun"
   data-iterate="alternatives"
