--- a/templates/learn.html
+++ b/templates/learn.html
@@ -75,7 +75,7 @@
 
     <div 
       id="footer_correct"
-      onshow="audio-play:[assets/audio/correct.mp3];disable:#main"
+      onshow="audio-play:[assets/audio/correct.mp3];disable:*main"
       bgcolor="darkseagreen"
       color="white"
       class="pa l0 t0"
@@ -103,7 +103,7 @@
 
     <div 
       id="footer_wrong" 
-      onshow="audio-play:[assets/audio/wrong.mp3];disable:#main"
+      onshow="audio-play:[assets/audio/wrong.mp3];disable:*main"
       onshow="disable:#main"
       bgcolor="indianred" color="white"
       class="pa l0 t0"
