--- a/templates/learn.html
+++ b/templates/learn.html
@@ -94,6 +94,7 @@
             paddingleft="2rem"
             lineheight="2.5rem"
             click="hide:#footer_correct"
+            onclicked="enable:*main"
             bindquery="c:c;p:p"
             setqueryhref="p:++"
             href="?c={c}&p={p:1}"
@@ -122,6 +123,7 @@
             paddingleft="2rem"
             lineheight="2.5rem"
             click="hide:#footer_wrong"
+            onclicked="enable:*main"
             bindquery="c:c;p:p"
             setqueryhref="p:++"
             href="?c={c}&p={p:1}"
