--- a/templates/learn.html
+++ b/templates/learn.html
@@ -76,7 +76,7 @@
     <div 
       id="footer_correct"
       onshow="audio-play:[assets/audio/correct.mp3];disable:*main"
-      bgcolor="darkseagreen"
+      bgcolor="forestgreen"
       color="white"
       class="pa l0 t0"
       width="100%"
@@ -105,8 +105,8 @@
     <div 
       id="footer_wrong" 
       onshow="audio-play:[assets/audio/wrong.mp3];disable:*main"
-      onshow="disable:#main"
-      bgcolor="indianred" color="white"
+      bgcolor="indianred"
+      color="white"
       class="pa l0 t0"
       width="100%"
       height="100%"
