--- a/includes/learn.html
+++ b/includes/learn.html
@@ -3,8 +3,9 @@
   <p>400</p>
   <hr>
 </div>
+<h1 id="loader" class="tac">...</h1>
 <div id="success">
-  <h1 marginbottom="2%" class="tac">Which one of these is <span
+  <h1 id="question" marginbottom="2%" class="tac" hide>Which one of these is <span
     id="word"
     class="di"
     ondata-bindchange="insertafterbegin:[&quot;];insertbeforeend:[&quot;];insertafterend:[?]"
@@ -15,6 +16,7 @@
     method="get"
     onsubmitted="data-bindpayload:[correct:alternative]"
     onifdata-bindpayload="([{correct}]:[{main}]):show:#footer_correct?show:#footer_wrong"
+    onifdata-src="([{main}]:[]):show:#footer_complete"
     class="box cards xs_gtc2 lg_gtc4 br0- bcwhite-"
     bindvar=":"
     bindasset="apikey:api.api_key"
@@ -26,8 +28,7 @@
     data-loader="#loader"
     data-onempty="#empty"
     data-set="total:total;main:main.id"
-    ifdata-set="([1]:[1]):alert"
-    data-onfinish="setmax:#progress:[{total}]"
+    data-onfinish="setmax:#progress:[{total}];show:#question"
     globalize-onsetload="rerun"
     data-iterate="alternatives"
     data-bind="main.word.eng:#word">
