--- a/templates/learn.html
+++ b/templates/learn.html
@@ -130,5 +130,31 @@
           >Continue</button>
         </div>
     </div>
+
+    <div 
+      id="footer_complete"
+      onshow="audio-play:[assets/audio/correct.mp3]"
+      bgcolor="gray"
+      color="white"
+      class="pa l0 t0"
+      width="100%"
+      height="100%"
+      hide>
+        <div class="df aic flc h100p">
+          <h3 marginright="2rem">Review</h3>
+          <button
+            class="gray"
+            bgcolor="limegreen"
+            color="white"
+            bold
+            radius="1rem"
+            paddingright="2rem"
+            paddingleft="2rem"
+            lineheight="2.5rem"
+            href="map.html"
+            target="_top"
+          >Continue</button>
+        </div>
+    </div>
   </footer>
 </template>
