--- a/templates/learn.html
+++ b/templates/learn.html
@@ -114,7 +114,6 @@
         <div class="df aic flc h100p">
           <h3 marginright="2rem">WRONG</h3>
           <button
-            class="gray"
             bgcolor="orangered"
             color="white"
             bold
@@ -134,16 +133,23 @@
     <div 
       id="footer_complete"
       onshow="audio-play:[assets/audio/correct.mp3]"
-      bgcolor="gray"
+      bgcolor="white"
       color="white"
       class="pa l0 t0"
       width="100%"
       height="100%"
       hide>
         <div class="df aic flc h100p">
-          <h3 marginright="2rem">Review</h3>
           <button
-            class="gray"
+            href="#"
+            radius="1rem"
+            bold
+            color="black"
+            paddingright="2rem"
+            paddingleft="2rem"
+            lineheight="2.5rem"
+            marginright="2rem">Review</button>
+          <a
             bgcolor="limegreen"
             color="white"
             bold
@@ -153,7 +159,7 @@
             lineheight="2.5rem"
             href="map.html"
             target="_top"
-          >Continue</button>
+          >Continue</a>
         </div>
     </div>
   </footer>
