--- a/templates/learn.html
+++ b/templates/learn.html
@@ -132,7 +132,7 @@
 
     <div 
       id="footer_complete"
-      onshow="audio-play:[assets/audio/correct.mp3]"
+      onshow="audio-play:[assets/audio/complete.wav]"
       bgcolor="white"
       color="white"
       class="pa l0 t0"
