--- a/templates/learn.html
+++ b/templates/learn.html
@@ -104,15 +104,24 @@
 
     <div 
       id="footer_wrong" 
-      onshow="audio-play:[assets/audio/wrong.mp3];disable:*main"
+      onshow="audio-play:[assets/audio/wrong.mp3];disable:*main;storage-set:[{main}]"
       bgcolor="indianred"
       color="white"
       class="pa l0 t0"
       width="100%"
       height="100%"
       hide>
-        <div class="df aic flc h100p">
-          <h3 marginright="2rem">WRONG</h3>
+        <div class="df aic flc h100p">            
+          <h3
+            id="wrongtext"
+            marginright="2rem" 
+            color="white"
+            animate-key="0;25;50;75;100"
+            animate-transform="translateX(0);translateX(-10px);translateX(10px);translateX(-10px);translateX(0)"
+            animate-easing="ease-in-out"
+            animate-duration="0.6s"
+            animate-start="#wrongtext" 
+          >WRONG</h3>
           <button
             bgcolor="orangered"
             color="white"
